Commented loadJSON in subpages

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             console.log("DOMContentLoaded");
-            loadJSON();
+            // loadJSON();
         })
 
         window.onscroll = function() {
