--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             console.log("DOMContentLoaded");
-            loadJSON();
+            // loadJSON();
         })
 
         window.onscroll = function() {
