added placeholder + uncommented img attributions

--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
         </div>
     </header>
     <main>
-        <div id="about_landing">
-            <!--<span>Photo by <a href="https://unsplash.com/@grittzheng?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Gritt Zheng</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>-->
-        </div>
+        <div id="about_landing"></div>
+        <!-- attribution -->
+        <div style="text-align: center;">Photo by <a href="https://unsplash.com/@grittzheng?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Gritt Zheng</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></div>
         <section id="section_about">
             <article>
                 <h2>En østeuropæisk inspireret bistro, Babushka leverer dig den fulde slaviske oplevelse.</h2>
