--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,9 @@
         </div>
     </header>
     <main>
-        <div id="contact_landing">
-            <!--<span>Photo by <a href="https://unsplash.com/@andrazlazic?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Andraz Lazic</a> on <a href="https://unsplash.com/s/photos/plitvice?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>-->
-        </div>
+        <div id="contact_landing"></div>
+        <!-- attribution -->
+        <div style="text-align: center;">Photo by <a href="https://unsplash.com/@andrazlazic?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Andraz Lazic</a> on <a href="https://unsplash.com/s/photos/plitvice?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></div>
         <section id="section_contact">
             <div id="contact_form" class="col_contact">
                 <form>
