--- a/dish.html
+++ b/dish.html
@@ -51,7 +51,7 @@
         <section id="section_dish">
             <article>
                 <div class="col">
-                    <img id="dish_image">
+                    <img id="dish_image" src="img/placeholder-dish.jpg">
                 </div>
                 <div class="col_text">
                     <div class="top">
@@ -73,7 +73,7 @@
         <template>
             <article>
                 <div class="dish_top">
-                    <img class="image">
+                    <img class="image" src="img/placeholder-dish.jpg">
                     <div class="text_top">
                         <h3 class="name"></h3>
                         <h3 class="price"></h3>
