--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
             <div id="landing_text">
                 <img src="img/babushka.svg" alt="logo resembling a matryoshka doll">
                 <a href="#section_menu">SE MENU</a>
-                <!--<span>Photo by <a href="https://unsplash.com/@yogesh_7?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Yogesh Pedamkar</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>-->
             </div>
             <i class="fas fa-chevron-down"></i>
         </div>
+        <!-- attribution -->
+        <div style="text-align: center;">Photo by <a href="https://unsplash.com/@yogesh_7?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Yogesh Pedamkar</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></div>
         <section id="section_menu">
             <div id="starter" class="category">
                 <div class="nav_menu">
@@ -172,6 +173,8 @@
                 </div>
                 <div id="cat_drikkevarer" class="menu_grid"></div>
             </div>
+            <!-- attribution -->
+            <a style="display: block; text-align: center;" href="https://www.freepik.com/free-photo/delicious-dumplings-with-cherries-jam_7012829.htm#query=pierogi&position=6&from_view=search&track=sph">dish image by timolina on Freepik</a>
         </section>
         <div id="newsletter">
             <form>
@@ -181,12 +184,13 @@
                     <button id="newsletter_button">Tilmeld</button>
                 </div>
             </form>
-            <!--<span>Photo by <a href="https://unsplash.com/@mumenthalers?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Simon Mumenthaler</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>-->
+            <!-- attribution -->
+            <span>photo by <a href="https://unsplash.com/@mumenthalers?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Simon Mumenthaler</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
         </div>
         <template>
             <article>
                 <div class="dish_top">
-                    <img class="image">
+                    <img class="image" src="img/placeholder-dish.jpg">
                     <div class="text_top">
                         <h3 class="name"></h3>
                         <h3 class="price"></h3>
